# research

./: README.md
blobpool-simulator/: .gitignore  README.md  pyproject.toml  requirements.txt
blobpool-simulator/examples/: quickstart.py
blobpool-simulator/framework/: __init__.py  events.py  network.py  node.py  statistics.py  transaction.py  visualization.py
blobpool-simulator/scenarios/: __init__.py  adversarial.py  basic_propagation.py  stress_test.py
eth/meetings/: 250511-sparse-blobpool.md  251028-sparse-blobpool.md
eth/notes/: eip-sparse-blobpool.md
eth/talks/: 251030-acdc-peerdas-cell-deltas.md
